--- a/views/index.jade
+++ b/views/index.jade
@@ -117,6 +117,7 @@ block content
     a(href="http://www.apolorama.com/", target="_blank"): img(src="/img/with/apolorama.png")
     a(href="http://filtermexico.com/", target="_blank"): img(src="/img/with/filter.png")
     a(href="http://b1mas4.com/", target="_blank"): img(src="/img/with/binomio.png")
+    a(href="http://www.cuatrocomunicacion.info/", target="_blank"): img(src="/img/with/cuatro.png")
 
 
   footer
