Add lineup bands

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,21 +20,27 @@ block content
         a(href="/fuetebillete") Fuete Billete
         a(href="/lumerians") Lumerians
       .row
+        a(href="/soniderotravesura") Sonidero Travesura
+      .row
         a(href="/clubz") Clubz
         a(href="/santos") Santos
         a(href="/latenitehowl") Late Nite Howl
       .row
         a(href="/gmrm") Ghost Magnet Roach Motel
       .row
+        a(href="/dpi") D/P/I
         a(href="/warmplaces") Warm Places
         a(href="/batwingsvsskrapez") Batwings vs Skrapez
       .row
+        a(href="/illuminauts") Illuminauts
         a(href="/systemerror") System Error
         a(href="/elvelar") Bruno Darío/El Velar
       .row
         a(href="/cesarcoronado") César Coronado
         a(href="/ladrones") L.A. Drones
+        a(href="/taxidee") Taxi Dee
       .row
+        a(href="/hexorcismos") Hexorcismos
         a(href="/czar") Czar
         a(href="/tolo") Tolo
         a(href="/schuy") S Chuy
