--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -78,16 +78,18 @@ a
       .row:nth-child(2)
         font-size 95%
       .row:nth-child(3)
-        font-size 95%
+        font-size 100%
       .row:nth-child(4)
         font-size 92%
       .row:nth-child(5)
-        font-size 65%
+        font-size 80%
       .row:nth-child(6)
         font-size 55%
       .row:nth-child(7)
         font-size 56%
       .row:nth-child(8)
+        font-size 65%
+      .row:nth-child(9)
         font-size 65%
   .other
     .row
