Remove el velar & system error

--- a/views/index.jade
+++ b/views/index.jade
@@ -33,14 +33,14 @@ block content
         a(href="/batwingsvsskrapez") Batwings vs Skrapez
       .row
         a(href="/illuminauts") Illuminauts
-        a(href="/systemerror") System Error
-        a(href="/elvelar") Bruno Darío/El Velar
+        a(href="/hexorcismos") Hexorcismos
+        //- a(href="/systemerror") System Error
+        //- a(href="/elvelar") Bruno Darío/El Velar
       .row
         a(href="/cesarcoronado") César Coronado
         a(href="/ladrones") L.A. Drones
         a(href="/taxidee") Taxi Dee
       .row
-        a(href="/hexorcismos") Hexorcismos
         a(href="/czar") Czar
         a(href="/tolo") Tolo
         a(href="/schuy") S Chuy
