--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -330,6 +330,11 @@ a
   margin 0 auto
   text-align center
 
+  .schedule
+    img
+      max-width 100%
+
+
   .places
     margin 40px 0
     .site
