--- a/views/index.jade
+++ b/views/index.jade
@@ -54,9 +54,11 @@ block content
     .bg
     .bg
 
-
   #info
     h1.when!= str.when
+
+    .schedule: img(src="/img/horarios.jpg")
+
     .where
       .places
         h1 Festival Site
